--- a/EfimovaS/package.json
+++ b/EfimovaS/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
+    "immer": "^7.0.9",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
