--- a/EfimovaS/package.json
+++ b/EfimovaS/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.4.0",
     "classnames": "^2.2.6",
     "immer": "^7.0.9",
     "prop-types": "^15.7.2",
