--- a/EfimovaS/package.json
+++ b/EfimovaS/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode=production",
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix \"src/**/*.js?(x)\""
+    "lint": "eslint --fix \"src/**/*.js?(x)\"",
+    "server": "json-server db/generate.js --port 3004"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "immer": "^7.0.9",
     "prop-types": "^15.7.2",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-eslint": "^10.1.0",
@@ -36,7 +39,9 @@
     "css-loader": "^4.3.0",
     "eslint": "^7.10.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "faker": "^5.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "json-server": "^0.16.2",
     "mini-css-extract-plugin": "^0.11.2",
     "prettier": "^2.1.2",
     "style-loader": "^1.2.1",
